2007-06-20  Patrick Mansfield  <patmans@us.ibm.com>

	* spu/jsre.h: Add JSRE_LSTAT.
	* spu/lstat.c: New file add lstat support via an assist call.
	* spu/conv_stat.c: New file, add common stat conversion code.
	* spu/fstat.c: Use __conv_stat.
	* spu/stat.c: Use __conv_stat.
	* spu/Makefile.in: Add conv_stat.o and lstat.o.

2007-06-20  Patrick Mansfield  <patmans@us.ibm.com>

	* spu/jsre.h: Add JSRE_GETCWD.
	* spu/getcwd.c: New file, implement getcwd with help from an
	assist call.
	* spu/Makefile.in: Add getcwd.

2007-06-20  Patrick Mansfield  <patmans@us.ibm.com>

	* spu/jsre.h: Add defines for new assist calls.
	* spu/chdir.c: New file, support chdir via assist call.
	* spu/chmod.c: New file, support chmod via assist call.
	* spu/chown.c: New file, support chown via assist call.
	* spu/fchdir.c: New file, support fchdir via assist call.
	* spu/fchmod.c: New file, support fchmod via assist call.
	* spu/fchown.c: New file, support fchown via assist call.
	* spu/lchown.c: New file, support lchown via assist call.
	* spu/mkdir.c: New file, support mkdir via assist call.
	* spu/mknod.c: New file, support mknod via assist call.
	* spu/rmdir.c: New file, support rmdir via assist call.
	* spu/Makefile.in: Add new files.

2007-06-20  Patrick Mansfield  <patmans@us.ibm.com>

	* spu/getpagesize.c: New file add getpagesize via an assist call.
	* spu/jsre.h: Add JSRE_GETPAGESIZE.
	* spu/Makefile.in: Add getpagesize.

2007-06-13  Patrick Mansfield  <patmans@us.ibm.com>

	* spu/Makefile.in: Add nanosleep.c.
	* spu/jsre.h: Add JSRE_NANOSLEEP.
	* spu/nanosleep.c: New file, supply nanosleep via an assist call.

2007-06-05  Patrick Mansfield  <patman@us.ibm.com>

	* spu/jsre.h: Remove the assist call structs and defines that are
	specific to one assist call from here.
	* spu/access.c: Move struct syscall_access_t to here.
	* spu/fstat.c: Move struct syscall_fstat_t to here.
	* spu/ftruncate.c: Move struct syscall_ftruncate_t to here.